# docker-images

./: .pre-commit-config.yaml  README.md  renovate.json
.github/workflows/: docker-build.yml
images/arduino-cli/: Dockerfile
images/freertos-dev-posix/: Dockerfile  README.md  chrony.conf  start-chrony.sh  welcome.txt
images/heishamon-dev/: Dockerfile  Dockerfile.pio  platformio.ini.inst
images/jumpstarter-dev/: DEVCONTAINER_TEST_RESULTS.md  DOCKER_IN_DOCKER_FIX.md  Dockerfile  README.md  docker-init.sh  kind-config.yaml  pyproject.toml  setup-jumpstarter.sh
images/jumpstarter-dev/.devcontainer/: devcontainer.json  init-devcontainer.sh
images/kicaddev/: Dockerfile  requirements.txt
images/kicaddev/scripts/: docker-entrypoint.sh  generate_ibom_headless.sh  kicad_docs_build.sh  kicad_docs_pdf.sh  kicad_export.sh
images/latex/: Dockerfile  setup.sh  texlive.profile
images/latex-node/: Dockerfile  README.md
images/nrfconnectsdk/: Dockerfile  README.md
images/nrfconnectsdk/.devcontainer/: devcontainer.json
images/openclaw/: Dockerfile  README.md  docker-compose.yml
images/platformio/: Dockerfile
images/platformio/scripts/: delete-workflow-runs.sh
images/wordpress-smtp/: Dockerfile  msmtp_entrypoint.sh
images/zephyr/: Dockerfile  README.md  entrypoint.sh
images/zephyr-sdk/: Dockerfile  README.md
scripts/: cleanup-runs.sh
