[project]
name = "jumpstarter-dev"
version = "1.0.3"
description = "Jumpstarter Development Environment"
requires-python = ">=3.11"
dependencies = [
    "jumpstarter-cli",
    "jumpstarter-driver-opendal",
    "jumpstarter-driver-power", 
    "jumpstarter-driver-composite",
    "requests",
    "pyyaml",
    "kubernetes",
]

[project.optional-dependencies]
testing = [
    "robotframework==7.0",
    "robotframework-requests==0.9.6",
    "robotframework-browser==18.6.3",
    "pytest",
    "pytest-asyncio",
]

dev = [
    "black",
    "isort",
    "flake8",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "robotframework==7.0",
    "robotframework-requests==0.9.6", 
    "robotframework-browser==18.6.3",
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
]